--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
         <span></span>
         <span></span>
     </div>
-    
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
 
     <script src="src/app.js"></script>
     <script src="src/clock.js"></script>
     <script src="src/quotes.js"></script>
     <script src="src/background.js"></script>
     <script src="src/todo.js"></script>
+    <script src="src/weather.js"></script>
 </body>
 </html>
